--- a/app/src/main/res/layout/activity_write_note.xml
+++ b/app/src/main/res/layout/activity_write_note.xml
@@ -20,6 +20,7 @@
         android:textColor="@color/white"
         android:paddingStart="@dimen/margin4"
         android:maxLines="10"
+        android:textSize="@dimen/textSize18"
         android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="@+id/editTitle"
         app:layout_constraintStart_toStartOf="@+id/editTitle"
@@ -29,11 +30,11 @@
         android:id="@+id/btnBackWrite"
         android:layout_width="@dimen/margin55"
         android:layout_height="@dimen/margin40"
-        android:layout_marginStart="@dimen/margin16"
+        android:layout_marginStart="@dimen/margin12"
         android:src="@drawable/ic_baseline_arrow_back_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/shape_btn_dialog"
+        android:background="@drawable/background_layout_show"
         android:backgroundTint="@color/colorTypeNoteRecycler"
         android:layout_marginTop="@dimen/margin48"
         />
@@ -43,36 +44,40 @@
         android:layout_width="@dimen/zero"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin48"
-        android:layout_marginEnd="@dimen/margin16"
         android:background="@android:color/transparent"
         android:ems="10"
+        android:hint="@string/title"
         android:inputType="textMultiLine"
         android:maxLines="6"
         android:paddingStart="@dimen/margin4"
-        android:hint="@string/title"
         android:textColor="@color/NameColorCategory"
         android:textColorHint="@color/NameColorCategory"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="@dimen/textSize18"
+        app:layout_constraintEnd_toEndOf="@+id/btnSaveWrite"
         app:layout_constraintStart_toStartOf="@+id/btnBackWrite"
         app:layout_constraintTop_toBottomOf="@+id/btnBackWrite" />
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <ImageButton
         android:id="@+id/btnColor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/margin56"
+        android:layout_height="@dimen/margin56"
+        android:background="@drawable/floating"
         android:layout_marginEnd="@dimen/margin16"
         android:layout_marginBottom="@dimen/margin32"
         android:clickable="true"
         android:src="@drawable/ic_baseline_color_lens_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
     <Button
         android:id="@+id/btnSaveWrite"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
+        android:background="@drawable/background_layout_show"
         android:text="@string/save"
+        android:layout_marginEnd="@dimen/margin12"
         android:textAllCaps="false"
-        android:background="@drawable/shape_btn_dialog"
+        android:textSize="@dimen/textSize14"
         app:layout_constraintBottom_toBottomOf="@+id/btnBackWrite"
-        app:layout_constraintEnd_toEndOf="@+id/editTitle"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btnBackWrite" />
 </androidx.constraintlayout.widget.ConstraintLayout>
