--- a/app/src/main/res/layout/dialog_chose.xml
+++ b/app/src/main/res/layout/dialog_chose.xml
@@ -13,9 +13,10 @@
         android:id="@+id/btnAddPassword"
         android:layout_width="0dp"
         android:layout_marginTop="@dimen/margin8"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/heightInput"
         android:background="@drawable/shape_space"
         android:text="@string/add_password"
+        android:textSize="@dimen/textSize14"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,9 +25,10 @@
     <Button
         android:id="@+id/btnDeletePassword"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/heightInput"
         android:text="@string/delete_password"
         android:textAllCaps="false"
+        android:textSize="@dimen/textSize14"
         android:background="@drawable/shape_space"
         android:layout_marginTop="@dimen/margin16"
         app:layout_constraintEnd_toEndOf="@+id/btnAddPassword"
