--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -11,11 +11,11 @@
         android:id="@+id/backBtn"
         android:layout_width="@dimen/margin55"
         android:layout_height="@dimen/margin40"
-        android:layout_marginStart="@dimen/margin16"
+        android:layout_marginStart="@dimen/margin12"
         android:src="@drawable/ic_baseline_arrow_back_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/shape_btn_dialog"
+        android:background="@drawable/background_layout_show"
         android:backgroundTint="@color/colorTypeNoteRecycler"
         android:layout_marginTop="@dimen/margin48"
         />
@@ -24,25 +24,14 @@
         android:id="@+id/nameCategoryTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:text=""
         android:textColor="@color/white"
-        android:layout_marginTop="@dimen/margin16"
         android:textSize="28sp"
         android:textStyle="bold"
-        android:layout_marginStart="@dimen/margin16"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/backBtn"
         app:layout_constraintTop_toBottomOf="@+id/backBtn" />
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btnAddNewNote"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/margin16"
-        android:layout_marginBottom="@dimen/margin32"
-        android:clickable="true"
-        android:src="@drawable/ic_baseline_add_24"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
+
     <GridView
         android:id="@+id/Grid"
         android:layout_width="@dimen/zero"
@@ -53,10 +42,22 @@
         android:horizontalSpacing="@dimen/margin8"
         android:verticalSpacing="@dimen/margin8"
         android:numColumns="2"
-
         android:layout_marginBottom="@dimen/margin8"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameCategoryTitle" />
+    <ImageButton
+        android:id="@+id/btnAddNewNote"
+        android:layout_width="@dimen/margin56"
+        android:layout_height="@dimen/margin56"
+        android:clickable="true"
+        android:background="@drawable/floating"
+        android:layout_marginEnd="@dimen/margin16"
+        android:layout_marginBottom="@dimen/margin32"
+        android:backgroundTint="@color/teal_200"
+        android:src="@drawable/ic_baseline_add_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
