--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -26,7 +26,7 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="0dp"
         android:layout_marginTop="@dimen/margin16"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/heightInputCount"
         android:layout_marginStart="@dimen/margin16"
         android:layout_marginEnd="@dimen/margin16"
         android:hint="@string/password"
@@ -44,8 +44,9 @@
             android:id="@+id/InputDataRegister"
             android:layout_width="match_parent"
             android:inputType="number"
+            android:textSize="@dimen/textSize14"
             android:textColor="@color/white"
-            android:layout_height="wrap_content" />
+            android:layout_height="@dimen/heightInput" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.constraintlayout.widget.Guideline
@@ -70,11 +71,12 @@
     <Button
         android:id="@+id/btnRegister"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/height_btn_register"
         android:layout_marginBottom="@dimen/margin16"
         android:background="@drawable/shape_btn_register"
         android:text="@string/register"
         android:textAllCaps="false"
+        android:textSize="@dimen/textSize14"
         app:backgroundTint="@color/teal_200"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
@@ -83,9 +85,9 @@
     <ProgressBar
         android:id="@+id/progressBarRegister"
         style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/margin52"
+        android:layout_height="@dimen/margin52"
         android:layout_marginTop="@dimen/margin16"
-        android:layout_height="wrap_content"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
