--- a/app/src/main/res/layout/activity_show_note.xml
+++ b/app/src/main/res/layout/activity_show_note.xml
@@ -13,16 +13,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/btnBackShow"
-        android:layout_marginStart="@dimen/margin16"
+        android:layout_marginStart="@dimen/margin8"
         android:layout_marginTop="@dimen/margin48"
-        android:layout_marginEnd="@dimen/margin16"
+        android:layout_marginEnd="@dimen/margin8"
+        android:layout_marginBottom="@dimen/margin8"
+        android:background="@drawable/background_layout_show"
         >
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/btnBackShow"
-            android:background="@drawable/background_layout_show"
             android:padding="@dimen/margin16"
             app:layout_constraintTop_toBottomOf="@+id/btnBackShow">
 
@@ -67,40 +67,43 @@
 
         </RelativeLayout>
     </ScrollView>
-        <ImageButton
-            android:id="@+id/btnBackShow"
-            android:layout_width="@dimen/margin55"
-            android:layout_height="@dimen/margin40"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="@dimen/margin16"
-            android:layout_marginTop="@dimen/margin48"
-            android:background="@drawable/shape_btn_dialog"
-            android:backgroundTint="@color/colorTypeNoteRecycler"
-            android:src="@drawable/ic_baseline_arrow_back_24"
 
-            />
+    <ImageButton
+        android:id="@+id/btnBackShow"
+        android:layout_width="@dimen/margin55"
+        android:layout_height="@dimen/margin40"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="@dimen/margin12"
+        android:layout_marginTop="@dimen/margin48"
+        android:background="@drawable/background_layout_show"
+        android:backgroundTint="@color/colorTypeNoteRecycler"
+        android:src="@drawable/ic_baseline_arrow_back_24"
 
-        <ImageButton
-            android:id="@+id/btnDelete"
-            android:layout_width="@dimen/margin55"
-            android:layout_height="@dimen/margin40"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="@dimen/margin16"
-            android:layout_marginTop="@dimen/margin48"
-            android:layout_marginEnd="@dimen/margin16"
-            android:background="@drawable/shape_btn_dialog"
-            android:backgroundTint="@color/colorTypeNoteRecycler"
-            android:src="@drawable/ic_baseline_delete_24" />
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        />
+
+    <ImageButton
+        android:id="@+id/btnDelete"
+        android:layout_width="@dimen/margin55"
+        android:layout_height="@dimen/margin40"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="@dimen/margin16"
+        android:layout_marginTop="@dimen/margin48"
+        android:layout_marginEnd="@dimen/margin12"
+        android:background="@drawable/background_layout_show"
+        android:backgroundTint="@color/colorTypeNoteRecycler"
+        android:src="@drawable/ic_baseline_delete_24" />
+
+    <ImageButton
         android:id="@+id/btnEdit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/margin56"
+        android:layout_height="@dimen/margin56"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="@dimen/margin16"
         android:layout_marginBottom="@dimen/margin32"
+        android:background="@drawable/floating"
         android:clickable="true"
         android:src="@drawable/ic_baseline_edit_24" />
 </RelativeLayout>
