--- a/app/src/main/res/layout/dialog_password.xml
+++ b/app/src/main/res/layout/dialog_password.xml
@@ -11,6 +11,7 @@
         android:layout_width="@dimen/margin90"
         android:layout_height="@dimen/margin40"
         android:text="@string/save"
+        android:textSize="@dimen/textSize14"
         android:textAllCaps="false"
         android:background="@drawable/shape_btn_dialog"
         app:backgroundTint="@color/colorTypeNoteRecycler"
@@ -27,6 +28,7 @@
         android:layout_height="@dimen/margin40"
         android:background="@drawable/shape_btn_dialog"
         android:text="@string/cancel"
+        android:textSize="@dimen/textSize14"
         android:textAllCaps="false"
         android:layout_marginEnd="@dimen/margin8"
         app:backgroundTint="@color/colorTypeNoteRecycler"
@@ -38,7 +40,7 @@
         android:id="@+id/inputPassword"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/heightInputCount"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -46,7 +48,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:hint="Password"
+        android:hint="@string/password"
         app:counterTextColor="@color/white"
         app:counterMaxLength="8"
         app:counterEnabled="true"
@@ -57,8 +59,9 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputPass"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:textSize="@dimen/textSize14"
             android:textColor="@color/white"
+            android:layout_height="@dimen/heightInput"
             android:inputType="number"
             />
     </com.google.android.material.textfield.TextInputLayout>
@@ -67,7 +70,7 @@
         android:id="@+id/confirmPassword"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/heightInputCount"
         android:layout_marginStart="@dimen/margin8"
         android:layout_marginTop="@dimen/margin8"
         android:layout_marginEnd="@dimen/margin8"
@@ -85,8 +88,9 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputConfirmPass"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:textSize="@dimen/textSize14"
             android:textColor="@color/white"
+            android:layout_height="@dimen/heightInput"
             android:inputType="number"
             />
     </com.google.android.material.textfield.TextInputLayout>
