--- a/app/src/main/res/menu/menu_pass.xml
+++ b/app/src/main/res/menu/menu_pass.xml
@@ -2,6 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/privacyItem"
-        android:title="Privacy"
+        android:title="@string/privacy"
         />
 </menu>
