--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,4 +30,8 @@
     <dimen name="margin18">18dp</dimen>
     <dimen name="margin20">20dp</dimen>
     <dimen name="margin110">110dp</dimen>
+    <dimen name="heightInput">52dp</dimen>
+    <dimen name="heightInputCount">80dp</dimen>
+    <dimen name="height_btn_register">48dp</dimen>
+    <dimen name="margin56">56dp</dimen>
 </resources>
