--- a/app/src/main/res/layout/activity_write_note.xml
+++ b/app/src/main/res/layout/activity_write_note.xml
@@ -71,7 +71,7 @@
     <Button
         android:id="@+id/btnSaveWrite"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_height="@dimen/margin40"
         android:background="@drawable/background_layout_show"
         android:text="@string/save"
         android:layout_marginEnd="@dimen/margin12"
