--- a/app/src/main/res/layout/item_in_recycler.xml
+++ b/app/src/main/res/layout/item_in_recycler.xml
@@ -37,11 +37,24 @@
     <ImageButton
         android:id="@+id/btnDeleteItemInRecycler"
         android:layout_width="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="@dimen/margin16"
+        android:background="@android:color/transparent"
         android:layout_height="wrap_content"
-        android:background="@color/colorTypeNoteRecycler"
         app:layout_constraintBottom_toBottomOf="@+id/nameCategory"
         app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"
         app:layout_constraintTop_toTopOf="@+id/nameCategory"
         app:srcCompat="@drawable/ic_baseline_delete_24" />
+
+    <ImageButton
+        android:id="@+id/editNameCategory"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:layout_marginEnd="@dimen/margin8"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/nameCategory"
+        app:layout_constraintEnd_toStartOf="@+id/btnDeleteItemInRecycler"
+        app:layout_constraintTop_toTopOf="@+id/nameCategory"
+        app:srcCompat="@drawable/ic_baseline_edit_note_24" />
 </androidx.constraintlayout.widget.ConstraintLayout>
