--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="clickLongOnItemRecycler">#B31C1E1F</color>
     <color name="colorTypeNoteRecycler">#1C1E1F</color>
     <color name="NameColorCategory">#47494B</color>
     <color name="colorSelectOne">#CF7494</color>
